# taipan_logger

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
example_files/: example.py
taipan_logger/: __init__.py  decorator.py  exceptions.py  logger.py
